--- a/Linux/linux_3_常用技巧/2024-05-22-linux_3_02_常用技巧.md
+++ b/Linux/linux_3_常用技巧/2024-05-22-linux_3_02_常用技巧.md
@@ -9,6 +9,126 @@ tag: Linux
 
 + linux系统下常用技巧
 
+## linux tar命令 多线程压缩
+
+在Linux系统中，`tar`命令用于创建归档文件，通常与`gzip`、`bzip2`等压缩工具结合使用。默认情况下，`tar`命令不支持多线程压缩，但你可以通过使用多线程压缩工具来实现这个功能。下面是几种方法：
+
+### 方法一：使用 `pigz` (parallel implementation of gzip)
+`pigz` 是 `gzip` 的多线程版本，可以直接替代 `gzip` 使用。
+
+1. 安装 `pigz`：
+
+   ```bash
+   sudo apt-get install pigz    # Ubuntu/Debian
+   sudo yum install pigz        # CentOS/RHEL
+   ```
+
+2. 使用 `tar` 和 `pigz` 进行多线程压缩：
+
+   ```bash
+   tar -cf - /path/to/directory | pigz -p 8 > archive.tar.gz
+   ```
+
+   其中 `-p 8` 指定了使用 8 个线程，可以根据你的 CPU 核心数进行调整。
+
+### 方法二：使用 `pxz` (parallel xz)
+`pxz` 是 `xz` 的多线程版本。
+
+1. 安装 `pxz`：
+
+   ```bash
+   sudo apt-get install pxz    # Ubuntu/Debian
+   sudo yum install pxz        # CentOS/RHEL
+   ```
+
+2. 使用 `tar` 和 `pxz` 进行多线程压缩：
+
+   ```bash
+   tar -cf - /path/to/directory | pxz -T8 > archive.tar.xz
+   ```
+
+   其中 `-T8` 指定了使用 8 个线程。
+
+### 方法三：使用 `pbzip2` (parallel bzip2)
+`pbzip2` 是 `bzip2` 的多线程版本。
+
+1. 安装 `pbzip2`：
+
+   ```bash
+   sudo apt-get install pbzip2    # Ubuntu/Debian
+   sudo yum install pbzip2        # CentOS/RHEL
+   ```
+
+2. 使用 `tar` 和 `pbzip2` 进行多线程压缩：
+
+   ```bash
+   tar -cf - /path/to/directory | pbzip2 -p8 > archive.tar.bz2
+   ```
+
+   其中 `-p8` 指定了使用 8 个线程。
+
+### 示例总结
+例如，要使用 `pigz` 进行多线程压缩 `/home/user/data` 目录，命令如下：
+
+```bash
+tar -cf - /home/user/data | pigz -p 8 > data.tar.gz
+```
+
+解压缩命令相应地调整为：
+
+```bash
+pigz -d -p 8 data.tar.gz | tar -xf -
+```
+
+以上这些方法都可以显著加快压缩过程，特别是在处理大型文件或目录时，选择合适的线程数可以充分利用多核 CPU 的性能。
+
+## linux scp 忽略指定目录
+
+在 Linux 上使用 `scp`（Secure Copy）命令时，如果你想要忽略特定目录，可以使用 `rsync` 命令的 `--exclude` 选项，因为 `scp` 本身并没有直接提供忽略特定目录的功能。`rsync` 是一个功能更强大的工具，可以在网络上同步文件和目录。
+
+以下是如何使用 `rsync` 忽略特定目录的示例：
+
+```sh
+rsync -avz --exclude '忽略的目录' 源路径 用户名@远程主机:目标路径
+```
+
+这里是具体步骤：
+
+1. **`-a`**：归档模式，表示递归复制文件，并保持文件的属性。
+2. **`-v`**：详细模式，显示过程信息。
+3. **`-z`**：压缩传输文件以节省带宽。
+4. **`--exclude`**：指定要忽略的目录或文件。
+
+假设你想要将本地的 `/home/user/data` 目录复制到远程主机 `remote_host` 的 `/backup` 目录，但要忽略 `data/ignore_this_dir` 目录，可以使用以下命令：
+
+```sh
+rsync -avz --exclude 'ignore_this_dir' /home/user/data user@remote_host:/backup
+```
+
+如果你必须使用 `scp`，可以考虑以下变通方法：
+
+1. **创建一个临时副本**：在本地创建一个源目录的临时副本，并删除要忽略的目录。
+2. **使用 `scp` 复制临时副本**：将临时副本复制到远程主机。
+3. **删除临时副本**：删除本地的临时副本。
+
+例如：
+
+```sh
+# 创建临时副本
+cp -r /home/user/data /home/user/data_temp
+
+# 删除要忽略的目录
+rm -rf /home/user/data_temp/ignore_this_dir
+
+# 使用 scp 复制临时副本
+scp -r /home/user/data_temp user@remote_host:/backup
+
+# 删除本地的临时副本
+rm -rf /home/user/data_temp
+```
+
+这种方法虽然有点笨拙，但可以在没有 `rsync` 时实现类似的功能。推荐使用 `rsync`，因为它更高效且功能强大。
+
 ## 禁用内核升级
 
 + 查看可用内核
