--- a/Personal/2022-06-09-work_工作周记.md
+++ b/Personal/2022-06-09-work_工作周记.md
@@ -2545,3 +2545,8 @@ last_modified_date: 2024-06-13 12:00:00 +0800
   + rk
     + 新镜像制作 [done]
     + 部署文档 [done]
+
++ 06.19
+  + 机械臂工控机拷贝所有数据，删除数据
+  + 机械臂设置打包模式
+  + rk盒子部署新镜像
