完成项目总结

--- a/Personal/2024-05-22-机器人项目总结.md
+++ b/Personal/2024-05-22-机器人项目总结.md
@@ -11,7 +11,7 @@ tag: Personal
 + 机器人项目的总结
 
 + 项目名称: 机场行李搬运项目
-+ 项目需求: 机械臂替代人工，完成行李从传送带到行李车的装在工作
++ 项目需求: 机械臂替代人工，完成行李从传送带到行李车的装载工作
 
 ## 项目的需求分析
 
