--- a/Personal/2024-05-22-求职简历.md
+++ b/Personal/2024-05-22-求职简历.md
@@ -63,8 +63,18 @@ tag: Personal
 + 技术栈：
   + 第三方开源库： mongoose, sqlite3, opencv, ffmpeg, cpp-httplib, nlohmann/json
   + 产品部署： docker, python scripts, shell scripts, frp
+  + 难点： 多任务管理和视频播放，服务稳定性
 + 工作和成就：
   + 负责后端服务器开发，视频流分析和实现检测业务，两个月的时间从零设计，开发，测试并发布。
   + 负责产品功能迭代，对接推送协议，告警音柱，售后支持等工作。对接的平台有南京傲途，常州启安，杭州新中大，苏州傲之途等，对接的音柱厂家有妙音，隽声。部署盒子40+
 
-## robot project
+## 机器人项目总结
+
++ 项目名称： 机场行李搬运项目
++ 项目介绍： 机场行李搬运项目以AI+机器人为目标，用机械臂代替人工，完成行李从传送带到行李车的装载工作。主要的硬件设备为 泰科机械臂，图漾3D相机，钧舵电动吸盘。
++ 技术栈：
+  + 第三方开源库： mongoose, boost.asio, STL, nlohmann/json, glog, gflags, opencv, eigen, cpp-httplib, openssl
+  + 难点： 机械臂末端姿态控制，行李搬运业务
++ 工作和成就：
+  + 整个项目大致分为三个模块，前端，后端，底层服务。底层服务分为六个模块，分别是：内核模块，机械臂模块，工具模块，相机模块，任务模块，算法模块。我负责内核模块，机械臂模块，任务模块的设计和开发工作。
+  + 完成了第一版任务编排数据结构设计，提供前端拖拽式编程功能接口；从零学习机械臂相关理论，封装不同机械臂SDK，向上提供统一的控制接口，完成手眼标定算法工程化，解决末端姿态控制问题；独立完成行李搬运业务，克服急停开发问题。团队完成具有动态抓取，智能码垛，手眼标定，目标测速，3D仿真等功能的机场行李搬运项目1.0版本
