--- a/Personal/2022-06-09-work_工作周记.md
+++ b/Personal/2022-06-09-work_工作周记.md
@@ -2547,6 +2547,12 @@ last_modified_date: 2024-06-13 12:00:00 +0800
     + 部署文档 [done]
 
 + 06.19
-  + 机械臂工控机拷贝所有数据，删除数据
-  + 机械臂设置打包模式
-  + rk盒子部署新镜像
+  + 机械臂工控机拷贝所有数据，删除数据 [done]
+  + 机械臂设置打包模式 [done]
+  + rk盒子部署新镜像 [done]
+
++ 06.20
+  + 交叉编译学习
+
++ 06.21
+  + 简历制作
