--- a/C++/C++_10_标准库/2024-05-22-C++_10_19_functional.md
+++ b/C++/C++_10_标准库/2024-05-22-C++_10_19_functional.md
@@ -9,6 +9,17 @@ tag: Cpp
 
 + C++ <functional>标准库
 
+## 什么是 std::function
+
++ std::function 是C++11引入的一个函数包装器类型。它的主要作用是，将任何可调用实体(比如函数，lambda表达式，函数指针或者函数对象)都包装成一个统一的对象，从而可以统一的保存，传递和调用这些可调用实体。
++ 简单的说，std::function就是一个可以容纳各种可调用实体的容器。我们可以将它看作是一个通用的函数指针，但是它比普通的函数指针更加灵活和强大。
+
++ std::function 提供了一种非常灵活和通用的方式来处理可调用实体，包括普通函数，lambda表达式以及函数对象。
++ 它的主要优点包括
+  + 统一的函数调用接口，简化了代码
+  + 可以存储在容器中，增强了代码的可扩展性
+  + 可以与std::bind()结合使用，实现参数绑定等高级功能
+
 ## C++ <functional>标准库
 
 `<functional>` 标准库是 C++ 中的一个头文件，提供了函数对象（Function Object）的支持，包括了一些预定义的函数对象和函数适配器。它使得函数能够像对象一样被传递、存储、返回以及调用。
