optimize project module layout

--- a/Project/Amlogic智能盒子/2024-05-22-a311d-note.md
+++ b/Project/Amlogic智能盒子/2024-05-22-a311d-note.md
@@ -1,5 +1,5 @@
 ---
-category: Project
+category: AmlogicModelTransformationProject
 date: 2024-05-22 09:00:00 +0800
 layout: post
 title: a311d-note
