--- a/Project/Abandoned_Object_Detection/2024-05-22-note.md
+++ b/Project/Abandoned_Object_Detection/2024-05-22-note.md
@@ -1,9 +1,9 @@
 ---
-category: AbandonedObjectDetectionProject
+category: Project
 date: 2024-05-22 09:00:00 +0800
 layout: post
 title: note
-tag: Project
+tag: AbandonedObjectDetectionProject
 ---
 ## 简介
 
