--- a/Project/Amlogic智能盒子/2024-05-22-a311d-note.md
+++ b/Project/Amlogic智能盒子/2024-05-22-a311d-note.md
@@ -1,9 +1,9 @@
 ---
-category: AmlogicModelTransformationProject
+category: Project
 date: 2024-05-22 09:00:00 +0800
 layout: post
 title: a311d-note
-tag: Project
+tag: AmlogicModelTransformationProject
 ---
 # 模型转换
 
