--- a/Project/dynamic-face-recognize-动态人脸识别/trash/2024-05-22-ice.md
+++ b/Project/dynamic-face-recognize-动态人脸识别/trash/2024-05-22-ice.md
@@ -3,6 +3,7 @@ category: Project
 date: 2024-05-22 09:00:00 +0800
 layout: post
 title: ice
+tag: DynamicFaceRecognizeProject
 ---
 
 + `./ice.exe --client --cmd 1 --id 2 --model-conf-path http://192.169.4.113:8084/ --detector-conf @--detect-model@models/Face_BITMAINLAND/DETECT.conf@--feature-model@models/Face_BITMAINLAND/FEATURE.conf@ --comparison-list http://192.169.4.113:8084/platform/images/recognize/研发中心/20221214211140.txt`
