--- a/Project/Robot-协作机器人开发/baggage-handling-system/2024-05-22-1-1_项目规划.md
+++ b/Project/Robot-协作机器人开发/baggage-handling-system/2024-05-22-1-1_项目规划.md
@@ -3,7 +3,7 @@ category: Project
 date: 2024-05-22 09:00:00 +0800
 layout: post
 title: 1-1_项目规划
-tag: Project
+tag: BaggageHandlingSystemProject
 ---
 
 + 机场行李抓取系统是在机场场景下，对传送带上移动的物体，使用机械臂进行抓取，放置在指定车厢中的一套解决方案
