--- a/Project/Robot-协作机器人开发/vcr-doc/2024-05-22-1-11_bm1864平台部署.md
+++ b/Project/Robot-协作机器人开发/vcr-doc/2024-05-22-1-11_bm1864平台部署.md
@@ -3,7 +3,7 @@ category: Project
 date: 2024-05-22 09:00:00 +0800
 layout: post
 title: 1-11_bm1864平台部署
-tag: Project
+tag: VisionControlRobotProject
 ---
 
 + 比特大陆1864平台，机械臂服务部署
