--- a/Project/Robot-协作机器人开发/vcr-doc/2024-05-22-1-8_机械臂笔记.md
+++ b/Project/Robot-协作机器人开发/vcr-doc/2024-05-22-1-8_机械臂笔记.md
@@ -3,7 +3,7 @@ category: Project
 date: 2024-05-22 09:00:00 +0800
 layout: post
 title: 1-8_机械臂笔记
-tag: Project
+tag: VisionControlRobotProject
 ---
 
 + 机械臂相关的常识问题
