--- a/Project/Robot-协作机器人开发/arwen-doc/2024-05-22-机械臂设计文档01.md
+++ b/Project/Robot-协作机器人开发/arwen-doc/2024-05-22-机械臂设计文档01.md
@@ -3,7 +3,7 @@ category: Project
 date: 2024-05-22 09:00:00 +0800
 layout: post
 title: 机械臂设计文档01
-tag: Project
+tag: RobotOfArwenProject
 ---
 
 + ws://192.169.7.32:9999/websocket
