--- a/Project/Robot-协作机器人开发/cob-doc/2024-05-22-cob-info.md
+++ b/Project/Robot-协作机器人开发/cob-doc/2024-05-22-cob-info.md
@@ -3,7 +3,7 @@ category: Project
 date: 2024-05-22 09:00:00 +0800
 layout: post
 title: cob-info
-tag: Project
+tag: CobProject
 ---
 
 + / 1000'000
