--- a/Project/Robot-协作机器人开发/cob-jaw/2024-05-22-jaw_理论基础.md
+++ b/Project/Robot-协作机器人开发/cob-jaw/2024-05-22-jaw_理论基础.md
@@ -3,7 +3,7 @@ category: Project
 date: 2024-05-22 09:00:00 +0800
 layout: post
 title: jaw_理论基础
-tag: Project
+tag: JawProject
 ---
 
 + 电动夹爪相关的理论知识
