--- a/Project/Robot-协作机器人开发/robot-doc/2024-05-22-robot_理论基础.md
+++ b/Project/Robot-协作机器人开发/robot-doc/2024-05-22-robot_理论基础.md
@@ -3,7 +3,7 @@ category: Project
 date: 2024-05-22 09:00:00 +0800
 layout: post
 title: robot_理论基础
-tag: Project
+tag: RobotProject
 ---
 
 + 机械臂相关开发的理论基础知识笔记
