--- a/Project/Robot-协作机器人开发/vcr-doc/2024-05-22-1-10_任务指令解析.md
+++ b/Project/Robot-协作机器人开发/vcr-doc/2024-05-22-1-10_任务指令解析.md
@@ -3,7 +3,7 @@ category: Project
 date: 2024-05-22 09:00:00 +0800
 layout: post
 title: 1-10_任务指令解析
-tag: Project
+tag: VisionControlRobotProject
 ---
 
 + 任务指令参数设计，解析
