--- a/Project/vca_视频结构化引擎/vca_doc/2024-05-22-1_1_项目基础.md
+++ b/Project/vca_视频结构化引擎/vca_doc/2024-05-22-1_1_项目基础.md
@@ -3,6 +3,7 @@ category: Project
 date: 2024-05-22 09:00:00 +0800
 layout: post
 title: 1_1_项目基础
+tag: VideoContentAnalysisProject
 ---
 
 ## 拉取子项目 编译链
