--- a/Project/Robot-协作机器人开发/robot-doc/2024-05-22-robot-base-基础01.md
+++ b/Project/Robot-协作机器人开发/robot-doc/2024-05-22-robot-base-基础01.md
@@ -3,7 +3,7 @@ category: Project
 date: 2024-05-22 09:00:00 +0800
 layout: post
 title: robot-base-基础01
-tag: RobotProject
+tag: ProjectOfRobot
 ---
 
 + 机器人有诸多的运动方式，如直线运动、关节角运动等。轨迹（点）作为机器人的运动路径，自然也有不同的运动指令类型，主要有MoveL, MoveJ, MoveAbsj, MoveC这四种。
