--- a/Project/Robot-协作机器人开发/2024-05-22-readme.md
+++ b/Project/Robot-协作机器人开发/2024-05-22-readme.md
@@ -3,7 +3,7 @@ category: Project
 date: 2024-05-22 09:00:00 +0800
 layout: post
 title: readme
-tag: URDFParserProject
+tag: ProjectOfURDFParser
 ---
 
 + 机器人项目笔记
