--- a/Project/Robot-协作机器人开发/cob-doc/2024-05-22-code_代码文档.md
+++ b/Project/Robot-协作机器人开发/cob-doc/2024-05-22-code_代码文档.md
@@ -3,7 +3,7 @@ category: Project
 date: 2024-05-22 09:00:00 +0800
 layout: post
 title: code_代码文档
-tag: CobProject
+tag: ProjectOfCob
 ---
 
 + 协作机器人后端代码文档 -- 旧版
