--- a/Project/Robot-协作机器人开发/robot-doc/2024-05-22-robot-math-数学基础01.md
+++ b/Project/Robot-协作机器人开发/robot-doc/2024-05-22-robot-math-数学基础01.md
@@ -3,7 +3,7 @@ category: Project
 date: 2024-05-22 09:00:00 +0800
 layout: post
 title: robot-math-数学基础01
-tag: RobotProject
+tag: ProjectOfRobot
 ---
 
 ### 弧度和度
