--- a/Project/Robot-协作机器人开发/robot-doc/2024-05-22-robot_常用知识.md
+++ b/Project/Robot-协作机器人开发/robot-doc/2024-05-22-robot_常用知识.md
@@ -3,7 +3,7 @@ category: Project
 date: 2024-05-22 09:00:00 +0800
 layout: post
 title: robot_常用知识
-tag: RobotProject
+tag: ProjectOfRobot
 ---
 
 + 机器人项目开发过程中需要记录的内容
