--- a/Project/Robot-协作机器人开发/ty-doc/2024-05-22-1_1_理论基础.md
+++ b/Project/Robot-协作机器人开发/ty-doc/2024-05-22-1_1_理论基础.md
@@ -3,7 +3,7 @@ category: Project
 date: 2024-05-22 09:00:00 +0800
 layout: post
 title: 1_1_理论基础
-tag: TuyangProject
+tag: ProjectOfTuyang
 ---
 
 + 图漾详解开发相关的基础知识
