--- a/Project/jingshi-晶视智能盒子/2024-05-22-jingshi_1838.md
+++ b/Project/jingshi-晶视智能盒子/2024-05-22-jingshi_1838.md
@@ -3,7 +3,7 @@ category: Project
 date: 2024-05-22 09:00:00 +0800
 layout: post
 title: jingshi_1838
-tag: JingShiDecodeProject
+tag: ProjectOfJingShiDecode
 ---
 
 ## 任务
