--- a/Project/nvr_视频录像转发服务/2024-05-22-1-1_请求响应文档.md
+++ b/Project/nvr_视频录像转发服务/2024-05-22-1-1_请求响应文档.md
@@ -3,7 +3,7 @@ category: Project
 date: 2024-05-22 09:00:00 +0800
 layout: post
 title: 1-1_请求响应文档
-tag: NVRProject
+tag: ProjectOfNVR
 ---
 ## 简介
 
