--- a/Project/rk_工地盒子/rk_doc/2024-05-22-1-13_NVR视频转发.md
+++ b/Project/rk_工地盒子/rk_doc/2024-05-22-1-13_NVR视频转发.md
@@ -3,7 +3,7 @@ category: Project
 date: 2024-05-22 09:00:00 +0800
 layout: post
 title: 1-13_NVR视频转发
-tag: RKProject
+tag: ProjectOfRK
 ---
 ## 简介
 
