--- a/Personal/2022-06-09-work_工作周记.md
+++ b/Personal/2022-06-09-work_工作周记.md
@@ -2556,3 +2556,14 @@ last_modified_date: 2024-06-13 12:00:00 +0800
 
 + 06.21
   + 简历制作
+
+## 2024.06.24 - 2024.06.30
+
++ 06.24
+  + 增加学习笔记
+
++ 06.25
+  + 查看面试机会
+
++ 06.26
+  + 这一天正式回家，居家学习。
