--- a/Personal/2022-06-09-work_工作周记.md
+++ b/Personal/2022-06-09-work_工作周记.md
@@ -2569,3 +2569,9 @@ last_modified_date: 2024-06-13 12:00:00 +0800
   + 这一天正式回家，居家学习。
   + 青瞳视觉
     + 计算机科学基础知识扎实，全面的软件知识结构，包括软件工程、操作系统、多线程、进程间通信、数据库系统、网络系统等；
+  + 环境准备
+    + Ubuntu环境 - 外星人电脑
+    + windows环境 - 华为电脑恢复
+
++ 06.27
+  + 准备下午五点的面试
