--- a/Books/2024-06-27-数据结构-算法与应用-C++.md
+++ b/Books/2024-06-27-数据结构-算法与应用-C++.md
@@ -77,3 +77,11 @@ tag: book
 + 任意程序P所需要的空间可以表示为： c + Sp(实例特征)
   + 其中c是一个常量，表示空间需要的固定部分，Sp表示空间需求的可变部分。
 + 在分析一个程序的空间复杂度时，我们将集中计算Sp对任意给定的问题，我们首先要确定哪些实例特征可以用来估算空间需求。选择实例特征是一个很具体的问题，我们需要求助于实际的例子来说明各种可能的情况。一般来说，我们的选择仅限于程序输入和输出的规模。有时我们也会对数据项之间的关系进行复杂的估算。
+
+### 时间复杂度
+
++ 用分析方法确定一个程序的运行时间是复杂的，因此只能估算运行时间。而且有两个比较容易控制的方法
+  + 找出一个或多个关键操作，确定他们的执行时间
+  + 确定程序总的步数
+
++ 估算一个程序或函数的时间复杂度，一种方法是选择一种或者多种关键操作，例如加，乘，比较等，然后 确定每一种操作的执行次数。使用这种方法成功与否取决于是否能够找到耗时最大的操作。
