--- a/Personal/2022-06-09-work_工作周记.md
+++ b/Personal/2022-06-09-work_工作周记.md
@@ -2574,4 +2574,12 @@ last_modified_date: 2024-06-13 12:00:00 +0800
     + windows环境 - 华为电脑恢复
 
 + 06.27
+  + rk盒子调试文档
   + 准备下午五点的面试
+    + 结果 问题比较浅显，不如人意
+
++ 06.28
+  + 最后聚餐
+
++ 06.29
+  + 阅读数据结构，算法与应用数据
