--- a/Windows/2024-05-22-windows_02_常用命令.md
+++ b/Windows/2024-05-22-windows_02_常用命令.md
@@ -9,6 +9,117 @@ tag: Windows
 
 + Windows下常用命令
 
+## windows slmgr命令是什么
+
+`slmgr` 是 Windows 操作系统中的软件许可证管理工具，主要用于管理和激活 Windows 许可证。`slmgr` 实际上是 `Software Licensing Management Tool` 的缩写，通常通过命令行使用。以下是一些常见的 `slmgr` 命令及其功能：
+
+1. **`slmgr /dli`** - 显示当前的激活状态和许可证信息。
+2. **`slmgr /dlv`** - 显示更详细的许可证信息，包括激活 ID、安装 ID 等。
+3. **`slmgr /xpr`** - 显示当前 Windows 安装的许可证到期时间。
+4. **`slmgr /ipk <产品密钥>`** - 安装新的产品密钥。
+5. **`slmgr /ato`** - 激活 Windows。
+6. **`slmgr /rearm`** - 重置激活状态，允许重新激活。
+7. **`slmgr /upk`** - 卸载当前的产品密钥。
+
+使用这些命令时，需要在命令提示符（以管理员身份运行）中输入。例如，要查看当前激活状态，可以输入：
+
+```
+slmgr /dli
+```
+
+运行后，系统会弹出一个窗口，显示当前的激活信息。
+
+## windows slmgr命令 详解
+
+`slmgr` (Software Licensing Management Tool) 是 Windows 操作系统中的一个命令行工具，用于管理和激活 Windows 许可证。以下是 `slmgr` 命令的详细解释及其使用方法：
+
+### 基本命令
+
+1. **`slmgr /dli`**
+   - **功能**：显示当前的激活信息，包括许可证状态、剩余宽限期、激活 ID 等基本信息。
+   - **使用**：在命令提示符中输入 `slmgr /dli` 并回车。
+
+2. **`slmgr /dlv`**
+   - **功能**：显示更详细的激活信息，包括激活 ID、安装 ID、许可证状态和其他详细信息。
+   - **使用**：在命令提示符中输入 `slmgr /dlv` 并回车。
+
+3. **`slmgr /xpr`**
+   - **功能**：显示当前 Windows 安装的许可证到期时间。
+   - **使用**：在命令提示符中输入 `slmgr /xpr` 并回车。
+
+### 产品密钥管理
+
+4. **`slmgr /ipk <产品密钥>`**
+   - **功能**：安装新的产品密钥。
+   - **使用**：在命令提示符中输入 `slmgr /ipk <产品密钥>`，用实际的产品密钥替换 `<产品密钥>`。
+
+5. **`slmgr /cpky`**
+   - **功能**：从注册表中清除产品密钥，以保护隐私。
+   - **使用**：在命令提示符中输入 `slmgr /cpky` 并回车。
+
+6. **`slmgr /upk`**
+   - **功能**：卸载当前的产品密钥。这个命令可以用来删除当前系统中的产品密钥。
+   - **使用**：在命令提示符中输入 `slmgr /upk` 并回车。
+
+### 激活管理
+
+7. **`slmgr /ato`**
+   - **功能**：尝试在线激活 Windows。
+   - **使用**：在命令提示符中输入 `slmgr /ato` 并回车。
+
+8. **`slmgr /skms <服务器地址>`**
+   - **功能**：设置 KMS（Key Management Service） 服务器的地址。
+   - **使用**：在命令提示符中输入 `slmgr /skms <服务器地址>`，用实际的服务器地址替换 `<服务器地址>`。
+
+9. **`slmgr /ckms`**
+   - **功能**：清除现有的 KMS 服务器设置。
+   - **使用**：在命令提示符中输入 `slmgr /ckms` 并回车。
+
+10. **`slmgr /rearm`**
+    - **功能**：重置激活状态，这通常用于延长激活宽限期。
+    - **使用**：在命令提示符中输入 `slmgr /rearm` 并回车。
+
+### 其他命令
+
+11. **`slmgr /sprt <端口号>`**
+    - **功能**：设置 KMS 主机的端口号。
+    - **使用**：在命令提示符中输入 `slmgr /sprt <端口号>`，用实际的端口号替换 `<端口号>`。
+
+12. **`slmgr /dti`**
+    - **功能**：显示安装 ID，用于电话激活。
+    - **使用**：在命令提示符中输入 `slmgr /dti` 并回车。
+
+13. **`slmgr /sai <激活间隔>`**
+    - **功能**：设置自动激活间隔时间（以分钟为单位）。
+    - **使用**：在命令提示符中输入 `slmgr /sai <激活间隔>`，用实际的时间间隔替换 `<激活间隔>`。
+
+14. **`slmgr /sri <更新间隔>`**
+    - **功能**：设置 KMS 服务器的更新间隔时间（以分钟为单位）。
+    - **使用**：在命令提示符中输入 `slmgr /sri <更新间隔>`，用实际的时间间隔替换 `<更新间隔>`。
+
+### 使用示例
+
+假设你要查看当前的激活信息并安装一个新的产品密钥，可以按以下步骤操作：
+
+1. 打开命令提示符（以管理员身份运行）。
+2. 输入以下命令并回车：
+   ```
+   slmgr /dli
+   ```
+   查看当前激活状态。
+
+3. 输入以下命令并回车，安装新的产品密钥（用实际的产品密钥替换 `<产品密钥>`）：
+   ```
+   slmgr /ipk <产品密钥>
+   ```
+
+4. 输入以下命令并回车，激活 Windows：
+   ```
+   slmgr /ato
+   ```
+
+通过这些命令，你可以有效地管理和激活 Windows 系统的许可证。
+
 ## 常用命令
 
 在 Windows 系统下，命令行（命令提示符、PowerShell 或 Windows Terminal）提供了许多常用的命令，用于执行各种任务。以下是一些常用的 Windows 命令行命令：
