--- a/Windows/2024-05-22-windows_03_常用技巧.md
+++ b/Windows/2024-05-22-windows_03_常用技巧.md
@@ -10,6 +10,16 @@ last_modified_date: 2024-06-14 17:00:00 +0800
 
 + windows系统下常用技巧
 
+## windows 10 系统激活
+
++ 命令如下
+```
+slmgr.vbs /upk
+slmgr /ipk W269N-WFGWX-YVC9B-4J6C9-T83GX
+slmgr /skms kms.ghxi.com
+slmgr /ato
+```
+
 ## windows wsl系统编译linux可执行程序
 
 在 Windows 上使用 Windows Subsystem for Linux (WSL) 可以方便地编译 Linux 可执行程序。WSL 允许在 Windows 上运行 Linux 环境，从而可以使用 Linux 原生的编译工具链。以下是具体步骤：
