--- a/Books/2024-06-27-数据结构-算法与应用-C++.md
+++ b/Books/2024-06-27-数据结构-算法与应用-C++.md
@@ -85,3 +85,41 @@ tag: book
   + 确定程序总的步数
 
 + 估算一个程序或函数的时间复杂度，一种方法是选择一种或者多种关键操作，例如加，乘，比较等，然后 确定每一种操作的执行次数。使用这种方法成功与否取决于是否能够找到耗时最大的操作。
+
+## 第三章 渐近记法
+
+## 第四章 性能测量
+
+### 引言
+
++ 性能测量(performance measurement)，关注的是一个程序实际需要的空间和时间。
++ C++函数 clock() 来测量时间，它用 滴答 数来计时。在头文件 time.h 中定义了常数 CLOCK_PER_SEC，它记录每秒流逝的 滴答 数，并转换成秒。CLOCK_PER_SEC=1000，滴答一次等于一毫秒。
+
+## 第五章 线性表-数组描述
+
++ 从本章开始研究数据结构，一直到第16章为止。第5章和第6章集中研究线性表，但主要是介绍数据的描述方法，即数据在计算机内存和磁盘上的存储方式。在随后的章节中，我们研究其他常用的数据结构描述方法。这些数据结构有矩阵，栈，队列，字典，优先级队列，竞赛树，搜索树和图。
++ C++程序常用的数据描述方法是数组描述和链式描述。线性表可以用来说明这两种方法。
++ STL容器(vector和list)大致相当于线性表描述方法和链式描述方法。STL的类还有很多其他的方法。在建立线性表的数组描述和链式描述中，我们使用的函数名和签名与STL代码所使用的相同。
+
++ 数组描述方法将元素存储在一个数组中，用一个数学公式来确定每个元素存储的位置，即在数组中的索引。这是最简单的一种存储方式，所有元素依次存储在一片连续的存储空间中，这就是通常所说的顺序表。
++ 本章引用的数据结构的概念如下
+  + 抽象数据类型和相应的C++抽象类
+  + 线性表
+  + 变长数组和数组容量倍增
+  + 数组描述
+  + 数据结构迭代器
++ 本章新增的C++概念
+  + 抽象类
+  + 迭代器
+
+### 数据对象和数据结构
+
++ 数据对象(data object)是一组实例或者值，例如
+```cpp
+boolean = {false, true};
+digit = {0, 1, 2, 3, 4, 5, 6, 7, 8, 9};
+```
++ boolean, digit都是数据对象，true和false是boolean的实例，而0，1---9是digit的实例。
++ 数据对象的一个实例，要么是一个不可再分的原子，要么是由另一个数据对象的实例作为成员复合而成。对后一种情形，用元素(element)来表示这些成员。
++ 数据对象的实例以及构成实例的元素通常都有某种相关性。例如，自然数0是最小的自然数，1是仅比0大的自然数。在串good中，g是第一个字母，0
++ 
