AI部署工程师规划

--- a/Books/2024-06-27-数据结构-算法与应用-C++.md
+++ b/Books/2024-06-27-数据结构-算法与应用-C++.md
@@ -122,5 +122,41 @@ digit = {0, 1, 2, 3, 4, 5, 6, 7, 8, 9};
 ```
 + boolean, digit都是数据对象，true和false是boolean的实例，而0，1---9是digit的实例。
 + 数据对象的一个实例，要么是一个不可再分的原子，要么是由另一个数据对象的实例作为成员复合而成。对后一种情形，用元素(element)来表示这些成员。
-+ 数据对象的实例以及构成实例的元素通常都有某种相关性。例如，自然数0是最小的自然数，1是仅比0大的自然数。在串good中，g是第一个字母，0
-+ 
++ 数据对象的实例以及构成实例的元素通常都有某种相关性。例如，自然数0是最小的自然数，1是仅比0大的自然数。在串good中，g是第一个字母，o是第二个和第三个字母，而d是最后一个字母。
+
++ 数据结构(data structure)是一个数据对象，同时这个对象的实例以及构成实例的元素都存在着联系，而且这些联系由相关的函数来规定。
++ 研究数据结构，关心的是数据对象(实际上是实例)的描述以及相关函数的具体实现。数据对象描述的好，函数的实现就会高效。
+
+### 线性表数据结构
+
++ 线性表(linear list)也称有序表(ordered list)，它的每一个实例都是元素的一个有序集合。
+
++ 一个线性表可以用一个抽象数据类型(abstract data type, ADT)来说明，既说明它的实例，也说明对他的操作。抽象数据类型的说明独立于任何程序语言的描述。所有对抽象数据类型的语言描述必须满足抽象数据类型的说明，抽象数据类型的说明保证了程序语言描述的有效性。另外，所有满足抽象数据类型说明的语言描述，都可以在应用中替换使用。
+
+### 数组描述
+
++ 在数组描述(array representation)中，用数组来存储线性表的元素。虽然可以用一个数组存储若干个线性表的实例，但是用不同数组存储每个实例更加容易一些。我们可以用一个数学公式来确定一个线性表的元素在数组中的位置。
++ 假定使用一个一维数组element来存储线性表的元素。数组element的位置有 element[0] --- element[arrayLength - 1]，其中arrayLength是数组长度或者容量。数组的每一个位置都可以存储线性表的一个元素。我们需要一个映射，使线性表的一个元素对应数组的一个位置。线性表的第0个元素在数组的什么位置？线性表的最后一个元素在数组的什么位置？这种映射可以用下面的一个公式来表示
+  + location(i) = i
+
++ 一维数组a，线性表元素存储在a[0:n-1]中，要增加或者减少这个数组的长度，首先要建立一个具有新长度的数组，然后把数组a的元素复制到这个新数组，最后改变数组a的值，使它能够引用到新数组。
++ 当数组满而需要加大数组长度时，数组长度常常是要加倍的。这个过程称为数组倍增(array doubling)。数组倍增的时间，从渐近意义上考量，不会大于元素插入的总时间。
++ 为什么数组长度不是增加1或2，而是要加倍呢？数组长度每次增加1或2，虽然不影响插入操作的最坏时间复杂度，但是影响连续插入时的渐近时间复杂度。
+  
++ 定理：如果我们总是按一个乘法因子来增加数组长度，那么实施一系列线性表的操作所需要的时间与不用改变数组长度时相比，至多增加一个常数因子。
+
+### C++ 迭代器
+
++ 一个迭代器(iterator)是一个指针，指向对象的一个元素(例如，一个指向数组元素的指针)。顾名思义，一个迭代器可以用来逐个访问对象的所有元素。
++ 迭代器是编写C++通用算法的基础概念。STL的copy函数便是用来复制任何具有迭代器的对象的元素。
+
++ 为了简化迭代器的开发和基于迭代器的通用算法的分类，C++的STL定义了5中迭代器：
+  + 输入，输出，向前，双向和随机访问
++ 所有迭代器都具备操作符 == ， != 和解引用操作符 *
++ 另外，输入迭代器还提供了对其指向元素的只读操作以及前++和后++操作符。输出迭代器提供了对其指向元素的写操作和++操作符。向前迭代器具有++操作符，而双向迭代器既具有++操作符也具有--操作符。随机访问迭代器是最一般的迭代器，它既可以随意的实现跳跃移动，也可以通过指针算术运算来实现跳跃移动。
+
+### vector的描述
+
++ STL提供了一个基于数组的类 vector。
+
+## 第六章 链式描述
