--- a/Personal/2022-06-09-work_工作周记.md
+++ b/Personal/2022-06-09-work_工作周记.md
@@ -2583,3 +2583,16 @@ last_modified_date: 2024-06-13 12:00:00 +0800
 
 + 06.29
   + 阅读数据结构，算法与应用数据
+
++ 06.30
+  + 聚餐
+
+## 2024.07.01 - 2024.07.07
+
++ 07.01
+  + 学习中间件概念，工作方向不推荐
+  + 工作方向为 AI部署工程师
+    + 统计boss直聘上相关工作的岗位要求，形成笔记，目标是找到学习的侧重点
+    + 学习videoprocess源代码，按照岗位要求笔记有侧重点的提升
+  + 后续学习方向
+    + videoprocess项目吃透，做代码分析文档
