--- a/Personal/2022-06-09-work_工作周记.md
+++ b/Personal/2022-06-09-work_工作周记.md
@@ -2596,3 +2596,19 @@ last_modified_date: 2024-06-13 12:00:00 +0800
     + 学习videoprocess源代码，按照岗位要求笔记有侧重点的提升
   + 后续学习方向
     + videoprocess项目吃透，做代码分析文档
+
++ 07.02
+  + 格灵深瞳HR电话面试
+  + 上海华泰线上面试，破大防了，复习C++基础
+
++ 07.03
+  + 云蟾游戏面试，准备视频分析项目文档
+  + 格灵深瞳面试准备
+    + PPT四页 [doing]
+      + 第一页 个人介绍
+      + 第二页 视频分析盒子项目介绍
+      + 第三页 机器人项目介绍
+      + 第四页 人脸识别项目介绍
+  + 家里项目环境搭建
+    + 视频转rtsp流
+    + 盒子跑任务
