--- a/Personal/2022-06-09-work_工作周记.md
+++ b/Personal/2022-06-09-work_工作周记.md
@@ -2612,3 +2612,29 @@ last_modified_date: 2024-06-13 12:00:00 +0800
   + 家里项目环境搭建
     + 视频转rtsp流
     + 盒子跑任务
+
++ 07.04
+  + 格灵深瞳面试准备
+    + PPT四页 [done]
+      + 第一页 个人介绍
+      + 第二页 视频分析盒子项目介绍
+      + 第三页 机器人项目介绍
+      + 第四页 人脸识别项目介绍
+
++ 07.05
+  + 格灵深瞳面试
+
++ 07.06
+  + 游泳+购物
+
++ 07.07
+  + 同学聚餐
+
++ 07.08
+  + 面试蔚来测试开发岗位
+  + 基础环境搞崩了
+  + 裸土覆盖算法对接搁置
+
++ 07.09
+  + 卸掉游戏
+  + 给三三洗澡
