update nvidia driver install

--- a/NVIDIA/2024-05-22-nvidia_1_理论基础.md
+++ b/NVIDIA/2024-05-22-nvidia_1_理论基础.md
@@ -14,6 +14,84 @@ tag: NVIDIA
 + 运行命令：
   + `sudo apt-get autoremove --purge nvidia-*`
 
+## 最新驱动安装
+
+### 安装依赖
+
++ 安装驱动之前，必须要更新软件列表和安装依赖
+```bash
+sudo apt-get update      #更新软件列表
+sudo apt-get install g++
+sudo apt-get install gcc
+sudo apt-get install make
+```
+
+### 禁用nouveau
+
++ nouveau是Ubuntu自带的显卡驱动，但他是核显，我这里想安装独显，就得把他禁掉。
++ 创建文件，如果没有下载vim编辑器，将vim换成gedit即可
+```bash
+$ sudo vim /etc/modprobe.d/blacklist-nouveau.conf
+```
+
++ 在文件中插入以下内容，将nouveau加入黑名单，默认不开启
+```bash
+blacklist nouveau
+options nouveau modeset=0
+```
+
++ 输入以下命令使禁用生效然后重启
+```bash
+sudo update-initramfs -u   #更新系统
+sudo reboot
+```
+
++ 重启后验证
+```bash
+lsmod | grep nouveau
+```
+
++ 如果回车后无反应，则禁用成功
+
+### 先完全卸载之前的显卡驱动
+
++ ppa源文件卸载（方式一）：
+```bash
+$ sudo apt-get remove --purge nvidia*
+```
+
++ runfile源文件卸载（方式二）：
+```
+$ sudo ./NVIDIA-Linux-x86_64-384.59.run --uninstall
+```
+
+### 安装显卡驱动
+
++ 查询电脑最适合的显卡驱动版本
+```bash
+ubuntu-drivers devices
+```
+
++ 随后用命令行进行安装
+```bash
+sudo add-apt-repository ppa:graphics-drivers/ppa
+sudo apt-get update
+sudo apt-get install nvidia-driver-525 #此处数字要对应上面查询到的版本号
+sudo apt-get install mesa-common-dev
+```
+
++ 注意： 如果前面没有禁用secure boot，则在安装过程中会提示设置一个密码，在重启时需要输入密码验证以禁用secure boot，重启后会出现蓝屏，这时候不能直接选择continue,而应该按下按键，选择Enroll MOK, 确认后在下一个选项中选择continue,接着输入安装驱动时设置的密码，开机。
+
++ 安装完成后重启
+```bash
+sudo reboot
+```
+
++ 重启后在终端验证
+```bash
+nvidia-smi
+```
+
 ## NVIDIA 驱动安装
 
 + Ubuntu下安装NVIDIA驱动的三种方法：
