--- a/Linux/linux_3_常用技巧/2024-05-22-linux_3_02_常用技巧.md
+++ b/Linux/linux_3_常用技巧/2024-05-22-linux_3_02_常用技巧.md
@@ -9,6 +9,71 @@ tag: LinuxTechnique
 
 + linux系统下常用技巧
 
+## linux 交换空间配置
+
+在 Linux 系统中创建交换分区可以通过以下步骤完成：
+
+1. **检查当前交换空间**：
+   ```bash
+   sudo swapon --show
+   free -h
+   ```
+
+2. **创建一个新的交换文件或交换分区**：
+   - **创建交换文件**：
+     1. 创建交换文件：
+        ```bash
+        sudo fallocate -l 2G /swapfile
+        ```
+        如果 `fallocate` 不可用，可以使用 `dd`：
+        ```bash
+        sudo dd if=/dev/zero of=/swapfile bs=1M count=2048
+        ```
+     2. 设置正确的权限：
+        ```bash
+        sudo chmod 600 /swapfile
+        ```
+     3. 将文件格式化为交换空间：
+        ```bash
+        sudo mkswap /swapfile
+        ```
+     4. 启用交换文件：
+        ```bash
+        sudo swapon /swapfile
+        ```
+
+   - **创建交换分区**：
+     1. 使用 `fdisk` 或其他分区工具创建一个新的分区，类型为 `82` (Linux swap)：
+        ```bash
+        sudo fdisk /dev/sdX
+        ```
+     2. 格式化新的分区为交换空间：
+        ```bash
+        sudo mkswap /dev/sdXn
+        ```
+     3. 启用交换分区：
+        ```bash
+        sudo swapon /dev/sdXn
+        ```
+
+3. **更新 `/etc/fstab` 以使交换空间在系统启动时自动挂载**：
+   - 如果使用交换文件，添加以下行到 `/etc/fstab`：
+     ```
+     /swapfile none swap sw 0 0
+     ```
+   - 如果使用交换分区，添加以下行到 `/etc/fstab`：
+     ```
+     /dev/sdXn none swap sw 0 0
+     ```
+
+4. **验证交换空间**：
+   ```bash
+   sudo swapon --show
+   free -h
+   ```
+
+通过以上步骤，你可以在 Linux 系统中成功创建和启用交换空间。
+
 ## linux tar命令 多线程压缩
 
 在Linux系统中，`tar`命令用于创建归档文件，通常与`gzip`、`bzip2`等压缩工具结合使用。默认情况下，`tar`命令不支持多线程压缩，但你可以通过使用多线程压缩工具来实现这个功能。下面是几种方法：
