--- a/Personal/2022-06-09-work_工作周记.md
+++ b/Personal/2022-06-09-work_工作周记.md
@@ -2636,5 +2636,6 @@ last_modified_date: 2024-06-13 12:00:00 +0800
   + 裸土覆盖算法对接搁置
 
 + 07.09
-  + 卸掉游戏
-  + 给三三洗澡
+  + 卸掉游戏 [done]
+  + 给三三洗澡 [done]
+  + 安装nvidia显卡驱动
