--- a/Cuda/cuda_1_理论基础/2024-05-22-cuda_1_1_理论基础.md
+++ b/Cuda/cuda_1_理论基础/2024-05-22-cuda_1_1_理论基础.md
@@ -9,6 +9,49 @@ tag: Cuda
 
 + cuda相关的理论基础
 
+## cuda安装
+
++ 从NVIDIA官网CUDA下载页面: https://developer.nvidia.com/cuda-toolkit-archive 点击CUDA Toolkit 11.0.2下载相应版本的CUDA11.0.2。
++ 依次选择 Linux， x86_64, Ubuntu, 20.04。然后弹出三种安装方法，根据安装经验，推荐采用runfile(local)方法。这是由于CUDA的安装过程中需要很多依赖库文件，CUDA的run文件虽然比另外两种安装方法的文件大，但是他包含了所有的依赖库文件，所以相对来说很容易安装成功。
+
++ 在安装CUDA之前需要先安装一些相互依赖的库文件
+```bash
+sudo apt-get install freeglut3-dev build-essential libx11-dev libxmu-dev libxi-dev libgl1-mesa-glx libglu1-mesa libglu1-mesa-dev
+```
+
++ 下面为安装CUDA11.0.2的Ubuntu安装指令
+```bash
+wget https://developer.download.nvidia.com/compute/cuda/11.0.2/local_installers/cuda_11.0.2_450.51.05_linux.run
+sudo sh cuda_11.0.2_450.51.05_linux.run
+```
++ 运行上面指令后，会弹出如下界面，点击Continue，然后再输入accept
++ 接着，如下图所示，在弹出的界面中通过Enter键，取消Driver和450.51.05的安装，然后点击Install，等待
+
++ 配置CUDA的环境变量
+  + CUDA安装完成之后，需要配置变量环境才能正常使用，在.bashrc文件的最后添加以下CUDA环境变量配置信息
+```bash
+export PATH=$PATH:/usr/local/cuda/bin  
+export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/usr/local/cuda/lib64  
+export LIBRARY_PATH=$LIBRARY_PATH:/usr/local/cuda/lib64
+```
+
+## cudnn安装
+
++ 安装CUDA对应的cudnn 网址: https://developer.nvidia.com/rdp/cudnn-download
++ 对下载的 cudnn-11.0-linux-x64-v8.0.5.39.tgz 进行解压操作，得到一个文件夹cuda，命令为
+```bash
+tar -zxvf cudnn-11.0-linux-x64-v8.0.5.39.tgz
+```
++ 然后，使用下面两条指令复制cuda文件下的文件到 /usr/local/cuda/lib64和 /usr/local/cuda/include/ 中
+```bash
+cp lib/* /usr/local/cuda/lib64/
+cp include/* /usr/local/cuda/include/
+```
++ 拷贝完成之后，我们可以使用如下的命令查看cuDNN的信息
+```bash
+cat /usr/local/cuda-11.0/include/cudnn_version.h | grep CUDNN_MAJOR -A 2
+```
+
 ## cuda C 编程
 
 + CPU编程和GPU编程的主要区别是程序员对GPU架构的熟悉程度。用并行思维进行思考并对GPU架构有了基本的了解，会使你编写规模达到成百上千个核的并行程序，如同写穿行程序一样简单
