--- a/Personal/2022-06-09-work_工作周记.md
+++ b/Personal/2022-06-09-work_工作周记.md
@@ -2638,4 +2638,9 @@ last_modified_date: 2024-06-13 12:00:00 +0800
 + 07.09
   + 卸掉游戏 [done]
   + 给三三洗澡 [done]
-  + 安装nvidia显卡驱动
+  + 安装nvidia显卡驱动 [done]
+
++ 07.10
+  + 去看了上海慕尼黑电子展 
+    + 没有更多的实际收获，但是锻炼了参加多人场所的能力和交流的能力
+  + 安装cuda 和 tensorrt环境
