--- a/Project/rk_工地盒子/rk_doc/2024-05-22-1-18_版本发行.md
+++ b/Project/rk_工地盒子/rk_doc/2024-05-22-1-18_版本发行.md
@@ -147,7 +147,7 @@ curl --location --request POST 'http://127.0.0.1:8000/api/setting/task/add' \
 curl -X POST --data "{\"id\":\"rA5ox\"}" http://127.0.0.1:8000/api/setting/task/stop
 
 # 删除任务
-curl -X POST --data "{\"ids\":[\"A3lLD\"]}" http://127.0.0.1:8000/api/setting/task/delete
+curl -X POST --data "{\"ids\":[\"N4hJh\"]}" http://127.0.0.1:8000/api/setting/task/delete
 
 # 启动任务
 curl -X POST --data "{\"id\":\"rA5ox\"}" http://127.0.0.1:8000/api/setting/task/start
