--- a/Personal/2022-06-09-work_工作周记.md
+++ b/Personal/2022-06-09-work_工作周记.md
@@ -2643,4 +2643,7 @@ last_modified_date: 2024-06-13 12:00:00 +0800
 + 07.10
   + 去看了上海慕尼黑电子展 
     + 没有更多的实际收获，但是锻炼了参加多人场所的能力和交流的能力
-  + 安装cuda 和 tensorrt环境
+  + 安装cuda 和 tensorrt环境 [done]
+
++ 07.11
+  + 写一个cuda测试
