--- a/Books/2024-06-27-数据结构-算法与应用-C++.md
+++ b/Books/2024-06-27-数据结构-算法与应用-C++.md
@@ -160,3 +160,56 @@ digit = {0, 1, 2, 3, 4, 5, 6, 7, 8, 9};
 + STL提供了一个基于数组的类 vector。
 
 ## 第六章 链式描述
+
++ 用数组描述线性表是很自然的，因此你可能以为没有其他的描述方法了。
++ 在链式描述中，线性表的元素在内存中的存储位置是随即的。每个元素都有一个明确的指针或链(指针和链是一个意思)指向线性表的下一个元素的位置(即地址)
++ 在基于数组的描述中，元素的地质是由数学公式决定的。而在链式描述中，元素的地址是随即分布的。
++ STL的容器类list使用带有头节点的双向循环链表来描述实例。它的方法与vector的方法具有相同的签名和操作。因此，他的erase和insert的签名和抽象类型linearList的要求不同，然而和vector一样，它可以用来设计从抽象类linearList的方法具有相同的签名和操作。
+
+### 单向链表
+
++ 描述
+  + 在链式描述中，数据对象实例的每一个元素都用一个单元或节点来描述。节点不必是数组成员，因此不是用公式来确定元素的位置。取而代之的是，每一个节点都明确包含另一个相关节点的位置信息，这个信息称为链(link)或指针(pointer)
+  + 在对这个线性表的一个可能的链式描述中，每个元素都在一个单独的节点中描述，每一个节点都有一个链域，它的值是线性表的下一个元素的位置，即地址。
+  + 一般来说，为了找到索引为theIndex的元素，需要从firstNode开始，跟踪theIndex个指针才能找到。
+
++ 每一个节点只有一个链，这种结构称为单向链表(singly linked list)。链表从左到右，每一个节点(最后一个节点除外)都链接着下一个节点，最后一个节点的链阈值为NULL。这样的结构也称为链条(chain)
+
++ 结构chainNode
+  + 为了用链表描述线性表，我们要定义一个结构chainNode和一个类chain。
+
++ 类chain
+  + 类chain用单向链表实现了线性表，其中最后一个节点的指针域为NULL，即它用单向链接的一组节点实现线性表。
+
+### 循环链表和头节点
+
++ 两条措施，可以使链表的应用代码简洁和高效
+  + 把线性表描述成一个单向循环链表(singly linked circular list)(简称循环链表)，而不是单向链表
+  + 在链表的前面增加一个节点，称为头节点(header node)。只要将单向链表的尾节点与头节点链接起来，单向链表就成为循环链表。
+
+### 双向链表
+
++ 对于线性表的大多数应用来说，采用链表和/或循环链表已经足够了。然而，对于有些应用，如果每个元素节点既有一个指向后继的指针，又有一个指向前驱的指针，就会更加方便。
++ 双向链表(doubly linked list)便是这样一个有序的节点序列，其中每个节点都有两个指针nest和previous。
+  + next指针指向右边节点(如果存在)
+  + previous指针指向左边节点(如果存在)
+
+## 第七章 数组和矩阵
+
++ 在实际应用中，数据通常以表的形式出现。尽管用数组来描述表是最自然的方式，但为了减少程序所需的时间和空间，经常采用自定义的描述方式。
++ 本章首先检查了多维数组的行主描述方式和列主描述方式。这些描述方式把多维数组映射成一维数组。
++ 矩阵经常用二维数组来表示。然后，矩阵的索引通过从1开始，而C++的二维数组是从0开始。矩阵的操作有加法，减法和转置，但是C++的二维数组不支持这些操作。因此我们开发了类matrix，它与矩阵的关系密切
++ 我们还要考察具有特殊结构的矩阵，例如对角矩阵，三对角矩阵，三角矩阵和对陈矩阵。关于这些矩阵的描述方法，自定义数组与二维数组相比，不仅大大减少了存储空间安，也减少了大多数矩阵操作的运行时间。
+
+### 数组
+
++ 抽象数据类型
++ 一个数组的每一个实例都是形如(索引，值)的数对集合，其中任意两个数对的索引(index)都不相同。有关数组的操作如下
+  + 取值： 对一个给定的索引，取对应数对中的值
+  + 存值： 把一个新数对加到数对集合中。如果已存在一个索引相同的数对，就用新数对覆盖
++ 这两个操作定义了抽象数据类型array
+
+### 行主映射和列主映射
+
++ 数组的应用需要我们把数组元素序列化，即按一维顺序排列。例如，数组元素只能一次输出或输入一个。因此，我们必须确定一个输入或输出的顺序。
++ 从第一行开始，依次对每一行的索引从左至右连续编号。它把二维数组的索引映射为 [0, n-1]中的数，这种映射方式称为行主映射(row major mapping)。索引对应的数称为行主次序
