--- a/Books/2024-06-27-数据结构-算法与应用-C++.md
+++ b/Books/2024-06-27-数据结构-算法与应用-C++.md
@@ -213,3 +213,4 @@ digit = {0, 1, 2, 3, 4, 5, 6, 7, 8, 9};
 
 + 数组的应用需要我们把数组元素序列化，即按一维顺序排列。例如，数组元素只能一次输出或输入一个。因此，我们必须确定一个输入或输出的顺序。
 + 从第一行开始，依次对每一行的索引从左至右连续编号。它把二维数组的索引映射为 [0, n-1]中的数，这种映射方式称为行主映射(row major mapping)。索引对应的数称为行主次序
++ 另一种映射方式，称为列主映射(column major mapping)。在列主映射中，对索引的编号从最左列开始，依次对每一列的索引从上到下连续编号。
