--- a/Personal/2022-06-09-work_工作周记.md
+++ b/Personal/2022-06-09-work_工作周记.md
@@ -2630,6 +2630,8 @@ last_modified_date: 2024-06-13 12:00:00 +0800
 + 07.07
   + 同学聚餐
 
+## 2024.07.08 - 2024.07.14
+
 + 07.08
   + 面试蔚来测试开发岗位
   + 基础环境搞崩了
@@ -2647,3 +2649,12 @@ last_modified_date: 2024-06-13 12:00:00 +0800
 
 + 07.11
   + 写一个cuda测试
+
++ 07.12
+  + 拷贝工地项目代码
+  + 搭建编译环境，
+    + 实现vca编译
+    + 实现mnc编译
+  + rk
+    + 裸土覆盖算法对接
+    + 新平台推送协议开发
